--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
 			<artifactId>line-bot-servlet</artifactId>
 			<version>4.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.linecorp.bot</groupId>
+			<artifactId>line-bot-parser</artifactId>
+			<version>4.3.0</version>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
