--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.stevechao.test</groupId>
 	<artifactId>line-chrord-bot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+<!-- 	<packaging>war</packaging> -->
 	<name>line-chrord-bot</name>
 	<description>line-chrord-bot</description>
 	<properties>
