selenium mul-platform test'

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.stevechao.test</groupId>
 	<artifactId>line-chrord-bot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-<!-- 	<packaging>war</packaging> -->
+	<!-- <packaging>war</packaging> -->
 	<name>line-chrord-bot</name>
 	<description>line-chrord-bot</description>
 	<properties>
@@ -89,6 +89,12 @@
 			<version>4.3.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.141.59</version>
+		</dependency>
+
 
 	</dependencies>
 
